# bite

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Protocol.md  README.md  TUTORIAL.md  api.md  docker-compose.yml
.csharp/: Analytics.cs  Bite.cs  README.md
.csharp/Best HTTP/: BITEBestWS.cs
.csharp/Tests/: BiteTest.cs
.docker/BITE-with-a-WebSocket-Proxy/: README.md  docker-compose.yml
.docs/: api.md  architecture.txt  example.json  ideas.txt  json-key-ideas.txt  kimundi1.rs  todo.txt
.docs/deprecated/: old-parse.txt
.docs/ideas/: architecture.txt  multiple-subscriptions.txt
.docs/json-parsing/: ideas.rs
.docs/kimundi/: about.txt  kimundi2.rs
.docs/subscriptions/: brainstorming.txt  ideas.txt
.docs/wojciech/: architecture.txt
client/: Cargo.toml
client/src/: main.rs
docs/: codereview1.txt
example/: Cargo.toml
example/src/: lib.rs  main.rs
server/: Cargo.toml  Dockerfile
server/src/: backup.rs  channel.rs  connection.rs  db.rs  heartbeat.rs  main.rs  map.rs  parse.rs  pool.rs  subs.rs  work.rs
server/src_old/: subs.rs
server_old/src/: main.rs
src/: cleaner.rs  concat.py  concat.txt  conn.rs  connection.rs  data.rs  db.rs  frame.rs  heartbeat.rs  main.rs  map.rs  message.rs  msg.rs  parse.rs  parser.rs  pool.rs  protocol.rs  reader.rs  ready.rs  subs.rs  writer.rs
src/docs/: codereview1.txt  idea.txt  ideas.txt  todo.txt
src_old/: map.rs
subs/: Cargo.toml
subs/src/: main.rs
wsclient/: Cargo.toml
wsclient/src/: main.rs
wsserver/: Cargo.toml
wsserver/src/: main.rs
