[package]
name = "bite"
version = "0.3.0"
authors = ["Andrés Villalobos <andresalvivar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "3.4.0"
serde_json = "1.0.113"
bincode = "1.3.3"
log = "0.4.20"
pretty_env_logger = "0.5.0"