[package]
name = "bite"
version = "0.3.1"
authors = ["Andrés Villalobos <andresalvivar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "3.7.4"
serde_json = "1.0.137"
bincode = "1.3.3"
log = "0.4.25"
pretty_env_logger = "0.5.0"