[package]
name = "wsclient"
version = "0.1.0"
authors = ["Andrés Villalobos <andresalvivar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.13.0"
url = "2.1.0"
log = "0.4.14"
env_logger = "0.8.3"
